--- a/config
+++ b/config
@@ -7,6 +7,7 @@ RTMP_CORE_MODULES="                                         \
                 ngx_rtmp_access_module                      \
                 ngx_rtmp_record_module                      \
                 ngx_rtmp_live_module                        \
+                ngx_rtmp_bandwidth_detection_module         \
                 ngx_rtmp_play_module                        \
                 ngx_rtmp_flv_module                         \
                 ngx_rtmp_mp4_module                         \
@@ -33,6 +34,7 @@ RTMP_DEPS="                                                 \
                 $ngx_addon_dir/ngx_rtmp.h                   \
                 $ngx_addon_dir/ngx_rtmp_version.h           \
                 $ngx_addon_dir/ngx_rtmp_live_module.h       \
+                $ngx_addon_dir/ngx_rtmp_bandwidth_detection_module.h \
                 $ngx_addon_dir/ngx_rtmp_netcall_module.h    \
                 $ngx_addon_dir/ngx_rtmp_play_module.h       \
                 $ngx_addon_dir/ngx_rtmp_record_module.h     \
@@ -59,6 +61,7 @@ RTMP_CORE_SRCS="                                            \
                 $ngx_addon_dir/ngx_rtmp_access_module.c     \
                 $ngx_addon_dir/ngx_rtmp_record_module.c     \
                 $ngx_addon_dir/ngx_rtmp_live_module.c       \
+                $ngx_addon_dir/ngx_rtmp_bandwidth_detection_module.c \
                 $ngx_addon_dir/ngx_rtmp_play_module.c       \
                 $ngx_addon_dir/ngx_rtmp_flv_module.c        \
                 $ngx_addon_dir/ngx_rtmp_mp4_module.c        \
@@ -111,6 +114,6 @@ fi
 
 USE_OPENSSL=YES
 
-CFLAGS="$CFLAGS -I$ngx_addon_dir"
+# CFLAGS="$CFLAGS -I$ngx_addon_dir"
 # Debug build with all warnings as errors
-# CFLAGS="$CFLAGS -I$ngx_addon_dir -Wall -Wpointer-arith -Wno-unused-parameter -Werror"
+CFLAGS="$CFLAGS -I$ngx_addon_dir -Wall -Wpointer-arith -Wno-unused-parameter -Werror"
